--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href=./w04_nav_demo/nav.html>w04_nav_demo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./w05_bootstrap/pokemon.html">w05_bootstrap</a>
+            <a class="nav-link" href="./w05_bootstrap/nav.html">w05_bootstrap</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./w06_eiser/index.html">w06_eiser</a>
